# analog_simulator

./: CMakeLists.txt  README.md
examples/: rc_lowpass.net  rlc_lowpass.net
include/: Component.h  MnaSolver.h  Netlist.h
sample_output/: rc_out.csv  rlc_out.csv
scripts/: plot_bode.py
src/: MnaSolver.cpp  Netlist.cpp  main.cpp
